--- a/nodejs_api/package.json
+++ b/nodejs_api/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.1-security",
     "geocoder": "^0.2.3",
     "http": "0.0.0",
+    "jsonwebtoken": "^7.3.0",
     "path": "^0.12.7",
     "sequelize": "^3.30.4",
     "sqlite": "^2.5.0"
