--- a/nodejs_api/config/config.json
+++ b/nodejs_api/config/config.json
@@ -1,23 +1,14 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "./mydb.db",
-    "define": {
-        "timestamps": false
-    }
+    "storage": "./toilets.db"
   },
   "test": {
     "dialect": "sqlite",
-    "storage": "./mydb.db",
-    "define": {
-        "timestamps": false
-    }
+    "storage": "./toilets.db"
   },
   "production": {
     "dialect": "sqlite",
-    "storage": "./mydb.db",
-    "define": {
-        "timestamps": false
-    }
+    "storage": "./toilets.db"
   }
 }
